# spotify_randomiserstuff

./: README.md  controlTools.py  henrydle_notebook.ipynb  main.py  newPlaylistGenerator.py  playlistGatherer.py  playlistShuffler.py  pyproject.toml  spotifyfile.py  spotipyLogin.py
BackEndBaseClasses/: newPlaylistGenerator.py
BasicUtils/: playlistGatherer.py  playlistShuffler.py  playlistStats.py
Henrydle/: __init__.py  henrydle_base.py  henrydle_gui.py
baseClasses/: __init__.py  newPlaylistGenerator.py  spotipyLogin.py
henrydle/: __init__.py  henrydle_base.py  henrydle_gui.py
utils/: __init__.py  playlistGatherer.py  playlistShuffler.py  playlistStats.py
