[project]
name="henryspotify"
version="0.1.0"
authors=[
    { name="Henry Israel", email="henryisrael08@gmail.com" },
]
description = "Python project for messing with spotify"

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henry-israel/spotify_randomiserstuff"

